# NS-Graphics

./: .gitignore  .gitmodules  README.md  build-script.sh  imgui.ini  meson.build  meson_options.txt
docs/: 01.build.md
src/: main.cpp
src/core/: nengine.h
src/core/common/: common.h  logger.cpp  logger.h  mathUtil.h  nsInterpolation.h  nsMat.h  nsRandom.cpp  nsRandom.h  nsTime.h  nsTransform.cpp  nsTransform.h  nsVector.h  singleInstance.h
src/core/entity/: ActorEntity.cpp  ActorEntity.h  entity.h  nsEntity.cpp  nsEntity.h  userEntity.cpp  userEntity.h
src/core/entity/component/: callbackComponent.h  camera.h  component.h  components.cpp  components.h  nsMaterial.cpp  nsMaterial.h  tags.h
src/core/gpu/: geometry.cpp  geometry.h  gpu.h  shaderInterop.h
src/core/gpu/gl/: glBuffer.cpp  glBuffer.h  glCommon.h  glGeometry.cpp  glGeometry.h  glRenderTarget.cpp  glRenderTarget.h  glRenderTask.h  glRenderer.cpp  glRenderer.h  glShader.cpp  glShader.h  glShaderSrc.cpp
src/core/input/: input.h  inputAction.h  inputController.h
src/core/platform/: platformEvent.h
src/core/scene/: entity.h  nsScene.cpp  nsScene.h
src/editor/: app.cpp  app.h  main.cpp
src/editor/common/: env.h
src/editor/event/: eventController.h  events.cpp  events.h  simpleEventQueue.cpp  simpleEventQueue.h
src/editor/imgui/: imguiComponents.cpp  imguiComponents.h  imguiLayer.cpp  imguiLayer.h  imguiModule.h  imguiSceneWindow.cpp  imguiSceneWindow.h  imguiTextEditor.cpp  imguiTextEditor.h  imguiWindow.cpp  imguiWindow.h
src/editor/window/: SDLInputManager.cpp  SDLInputManager.h  SDLWindow.cpp  SDLWindow.h
src/example/LearnOpengl/: imguiExampleWindow.cpp  imguiExampleWindow.h  learnGL.cpp  learnGL.h  main.cpp  meson.build
src/example/LearnOpengl/ex/: ex00_shape.h  ex01_transform.h  ex02_coordinate.h  ex03_basicLighting.h  ex04_instancing.h  example.h
src/example/LearnOpengl/ex/shader/: shaders.h
src/example/LuaTest/: main.cpp  meson.build
src/example/LuaTest/simpleLua/: meson.build
src/example/LuaTest/solExample/: main.cpp  meson.build
src/example/VoxelShaderToy/: VST.cpp  VST.h  main.cpp  meson.build
src/example/VoxelShaderToy/Scene/: mainScene.cpp  mainScene.h
src/example/VoxelShaderToy/Scene/Entity/: box.cpp  box.h  cube.cpp  cube.h  luaComponent.h  user.cpp  user.h
src/example/thorvg/: imguiTvgWindow.cpp  imguiTvgWindow.h  main.cpp  meson.build  tvg.cpp  tvg.h
src/example/thorvg/ex/: ex00_shape.h  ex01_scene.h  ex02_update.h  ex03_region.h  example.h
src/example/thorvg/ex/algorithm/: dirtyRegion.h  main.cpp  region.h
src/example/thorvg/scene/: tvgexScene.h
subprojects/imgui/: CMakeLists.txt
subprojects/lua/: meson.build  meson_options.txt
subprojects/lua/src/: meson.build
